Parcels testing on plume tracker provided radial data

--- a/fieldset_compare.ipynb
+++ b/fieldset_compare.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# particle_interp_compare\n",
+    "# fieldset_compare\n",
     "\n",
     "compare particle simulations in different fieldsets with a single particle"
    ]
@@ -35,7 +35,7 @@
     "import matplotlib.pyplot as plt\n",
     "from parcels import FieldSet, ParticleSet, JITParticle, AdvectionRK4, ErrorCode, plotTrajectoriesFile, ParticleFile\n",
     "\n",
-    "from utils import create_path, add_noise\n",
+    "from utils import create_path, add_noise, load_pts_mat\n",
     "from parcels_utils import get_file_info\n",
     "from plot_utils import plot_trajectories"
    ]
@@ -46,18 +46,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir1km = \"current_netcdfs/west_coast_1km_hourly/\"\n",
-    "\n",
     "files = [\n",
-    "    get_file_info(dir1km + \"tijuana_river_lin.nc\", 1, name=\"lin\"),\n",
-    "    get_file_info(dir1km + \"tijuana_river_lin_aggr.nc\", 1, name=\"lin_aggr\")\n",
-    "]\n",
-    "\n",
-    "st = files[0][\"timerng\"][0]\n",
-    "ed = files[0][\"timerng\"][1]\n",
-    "for f in files:\n",
-    "    assert f[\"timerng\"][0] == st\n",
-    "    assert f[\"timerng\"][1] == ed"
+    "    get_file_info(\"current_netcdfs/Tot_SDLJ_20200810.nc\", 1, name=\"tot_sdlj\"),\n",
+    "    get_file_info(\"current_netcdfs/west_coast_1km_hourly/tj_plume_interped.nc\", 1, name=\"tj_plume\"),\n",
+    "]"
    ]
   },
   {
@@ -67,12 +59,21 @@
    "outputs": [],
    "source": [
     "do_sim = True\n",
-    "end_time = files[0][\"timerng\"][1]\n",
-    "# this was the very specific spawn time for particles that collided with land\n",
-    "spawn_time = np.datetime64(\"2020-06-17T09:00:00\")\n",
+    "\n",
+    "spawn_time = np.datetime64(\"2020-08-10T00:00:00\")\n",
+    "# end_time = files[0][\"timerng\"][1]\n",
+    "end_time = np.datetime64(\"2020-08-10T23:00:00\")\n",
     "max_var = 0.003\n",
-    "spawn_loc_base = np.array([32.551707, -117.138]) # (lat, lon)\n",
-    "spawn_locs = add_noise(spawn_loc_base, max_var, repeat=20)\n",
+    "\n",
+    "# (lat, lon)\n",
+    "# spawn_loc_base = np.array(\n",
+    "#     [32.551707, -117.138],\n",
+    "# )\n",
+    "\n",
+    "spawn_loc_base = load_pts_mat(\"mat/pts_20200810_0030.mat\").T[1090:1100]\n",
+    "\n",
+    "# spawn_locs = add_noise(spawn_loc_base, max_var, repeat=20)\n",
+    "spawn_locs = spawn_loc_base\n",
     "simulation_dt = timedelta(minutes=5)\n",
     "out_dt = timedelta(hours=1)\n",
     "save_dir = create_path(\"particledata/testcompare\")\n",
@@ -111,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "if do_sim:\n",
@@ -131,43 +134,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(files[0][\"domain\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "mod_domain = {\n",
-    "    'S': 32.545,\n",
-    "    'N': 32.585,\n",
-    "    'W': -117.158,\n",
-    "    'E': -117.13\n",
+    "    \"S\": 32.41,\n",
+    "    \"N\": 32.7,\n",
+    "    \"W\": -117.25,\n",
+    "    \"E\": -117\n",
     "}\n",
+    "# mod_domain = {\n",
+    "#     'S': 32.545,\n",
+    "#     'N': 32.585,\n",
+    "#     'W': -117.158,\n",
+    "#     'E': -117.13\n",
+    "# }\n",
     "# mod_domain = {\n",
     "#     'S': 32.5495,\n",
     "#     'N': 32.555,\n",
     "#     'W': -117.15,\n",
     "#     'E': -117.135\n",
     "# }\n",
-    "# mod_domain = {\n",
-    "#     'S': 32.575,\n",
-    "#     'N': 32.5766,\n",
-    "#     'W': -117.145,\n",
-    "#     'E': -117.140\n",
-    "# }\n",
+    "mod_domain = {\n",
+    "    'S': 32.49,\n",
+    "    'N': 32.55,\n",
+    "    'W': -117.2,\n",
+    "    'E': -117.05\n",
+    "}\n",
     "\n",
     "for i in range(len(spawn_locs)):\n",
     "    ps = np.array([f[\"pfiles\"][i].name for f in files])\n",
-    "    print(f\"starting at (lat, lon) {spawn_locs[i]}\")\n",
-    "#     plot_trajectories(ps, mod_domain)"
+    "    print(f\"starting at (lat, lon) {spawn_locs[i]}\")"
    ]
   },
   {
@@ -180,17 +179,6 @@
     "    ps = np.array([p.name for p in f[\"pfiles\"]])\n",
     "    print(f\"paths for {f['name']}\")\n",
     "    plot_trajectories(ps, mod_domain, legend=False, scatter=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "wack ass coordinates\n",
-    "\n",
-    "[  32.55096753 -117.13918667]\n",
-    "\n",
-    "[  32.55072813 -117.13842626]"
    ]
   }
  ],
