--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -38,7 +38,7 @@
     "import xarray as xr\n",
     "\n",
     "import utils\n",
-    "from utils import load_config, create_path, add_noise\n",
+    "from utils import load_config, create_path, add_noise, load_pts_mat\n",
     "from parcels_utils import get_file_info\n",
     "from plot_utils import plot_particles_age\n",
     "\n",
@@ -66,18 +66,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "configs_path = \"parcels_configs/\"\n",
+    "\n",
     "configs = [\n",
-    "    \"parcels_configs/plume_track.json\"\n",
-    "#     \"parcels_configs/tijuana_interped.json\",\n",
-    "#     \"parcels_configs/tijuana_lin.json\",\n",
-    "#     \"parcels_configs/tijuana_lin_aggr.json\",\n",
-    "#     \"parcels_configs/tijuana_less.json\",\n",
-    "#     \"parcels_configs/tijuana_now.json\",\n",
-    "#     \"parcels_configs/tijuana_onerep.json\",\n",
-    "#     \"parcels_configs/tijuana_range.json\",\n",
+    "    \"plume_track.json\",\n",
+    "    \"plume_track_totsdlj.json\"\n",
+    "#     \"tijuana_interped.json\",\n",
+    "#     \"tijuana_lin.json\",\n",
+    "#     \"tijuana_lin_aggr.json\",\n",
+    "#     \"tijuana_less.json\",\n",
+    "#     \"tijuana_now.json\",\n",
+    "#     \"tijuana_onerep.json\",\n",
+    "#     \"tijuana_range.json\",\n",
     "]\n",
     "\n",
-    "loaded_configs = [load_config(path) for path in configs]\n",
+    "loaded_configs = [load_config(configs_path + path) for path in configs]\n",
     "files = [get_file_info(cfg[\"netcdf_path\"], cfg[\"resolution\"], name=cfg[\"name\"], parcels_cfg=cfg[\"parcels_config\"]) for cfg in loaded_configs]"
    ]
   },
@@ -208,18 +211,7 @@
     "    cfg = f[\"cfg\"]\n",
     "    # data is from .mat file\n",
     "    if isinstance(cfg[\"spawn_points\"], str):\n",
-    "        # parse .mat file\n",
-    "        mat_data = scipy.io.loadmat(cfg[\"spawn_points\"])\n",
-    "        xf = mat_data[\"xf\"]\n",
-    "        yf = mat_data[\"yf\"]\n",
-    "        # filter out nan values\n",
-    "        xf = xf[np.where(~np.isnan(xf))].flatten()\n",
-    "        yf = yf[np.where(~np.isnan(yf))].flatten()\n",
-    "        assert len(xf) == len(yf)\n",
-    "        spawns = np.empty((2, len(xf)))\n",
-    "        # spawns are read as (lat, lon), so reverse order\n",
-    "        spawns[0] = yf\n",
-    "        spawns[1] = xf\n",
+    "        spawns = load_pts_mat(cfg[\"spawn_points\"], \"yf\", \"xf\")\n",
     "        cfg[\"spawn_points\"] = spawns.T\n",
     "    else:\n",
     "        cfg[\"spawn_points\"] = np.array(cfg[\"spawn_points\"])\n",
