--- a/plume_mat_loader.ipynb
+++ b/plume_mat_loader.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# comparison with plume tracker outputs\n",
-    "\n",
-    "because"
+    "# load mats into netcdfs from plume tracker"
    ]
   },
   {
@@ -110,60 +108,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = dataset_from_mat(\"mat/codartotalGrid.mat\", \"mat/Tot_SDLJ_20200810_0000.mat\")\n",
-    "ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fs = xr_dataset_to_fieldset(ds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "thredds = get_file_info(\"current_netcdfs/west_coast_1km_hourly/tj_plume_interped.nc\", 1, name=\"target\")\n",
-    "thredds[\"xrds\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fs.U.show()\n",
-    "thredds[\"fs\"].U.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = scipy.io.loadmat(\"mat/glist90zj_pts_position.mat\")\n",
-    "plot_particles(\n",
-    "    data[\"yf\"], data[\"xf\"], None, THING_DOMAIN,\n",
-    "    show=False, savefile=f\"mat/snap/glishsnap.png\", part_size=1\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_prefix = \"pts_20200810_\"\n",
-    "start = 30\n",
+    "file_prefix = \"Tot_SDLJ_20200810\"\n",
+    "start = 0\n",
     "incr = 100"
    ]
   },
@@ -175,15 +121,16 @@
    },
    "outputs": [],
    "source": [
+    "ds_total = None\n",
     "for i in range(start, 2400, incr):\n",
-    "    name = f\"mat/{file_prefix}{str(i).zfill(4)}.mat\"\n",
+    "    name = f\"mat/{file_prefix}_{str(i).zfill(4)}.mat\"\n",
     "    try:\n",
+    "        ds = dataset_from_mat(\"mat/codartotalGrid.mat\", name)\n",
+    "        if ds_total is None:\n",
+    "            ds_total = ds\n",
+    "        else:\n",
+    "            ds_total = xr.concat([ds_total, ds], dim=\"time\")\n",
     "        data = scipy.io.loadmat(name)\n",
-    "        plot_particles(\n",
-    "            data[\"yf\"], data[\"xf\"], None, THING_DOMAIN,\n",
-    "            show=False, savefile=f\"mat/snap/s{str(i).zfill(4)}.png\", part_size=1,\n",
-    "            titlestr=f\"particles at {i}\"\n",
-    "        )\n",
     "    except FileNotFoundError:\n",
     "        print(f\"file {name} not found\")"
    ]
@@ -194,7 +141,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_gif(25, \"mat/snap/s*.png\", \"mat/g.gif\")"
+    "ds_total.to_netcdf(f\"current_netcdfs/{file_prefix}.nc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs = xr_dataset_to_fieldset(ds_total)"
    ]
   }
  ],
