Remove land currents from plume tracker output

--- a/plume_mat_loader.ipynb
+++ b/plume_mat_loader.ipynb
@@ -29,7 +29,7 @@
     "import scipy.io\n",
     "import xarray as xr\n",
     "\n",
-    "from utils import create_gif\n",
+    "from utils import create_gif, load_pts_mat\n",
     "from parcels_utils import xr_dataset_to_fieldset, get_file_info\n",
     "from plot_utils import get_carree_axis, plot_particles"
    ]
@@ -57,7 +57,11 @@
     "    \"N\": 32.7,\n",
     "    \"W\": -117.25,\n",
     "    \"E\": -117\n",
-    "}"
+    "}\n",
+    "\n",
+    "coastline = load_pts_mat(\"mat/coastline.mat\", \"latz0\", \"lonz0\")\n",
+    "# just filter out the problematic upper coastline where it goes up and down\n",
+    "coastline = coastline[:, :288]"
    ]
   },
   {
@@ -66,13 +70,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.scatter(coastline[1], coastline[0], s=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def coord_inland(coastline, lat, lon):\n",
+    "    lower_ind = np.where(coastline[0] <= lat)[0]\n",
+    "    if lower_ind.size > 0:\n",
+    "        lower_ind = lower_ind[-1]\n",
+    "    else:\n",
+    "        lower_ind = 0\n",
+    "    upper_ind = np.where(coastline[0] >= lat)[0]\n",
+    "    if upper_ind.size > 0:\n",
+    "        upper_ind = upper_ind[0]\n",
+    "    else:\n",
+    "        upper_ind = -1\n",
+    "    left = min(coastline[1][lower_ind], coastline[1][upper_ind])\n",
+    "    # can get away with this since the coastline points are dense enough\n",
+    "    return lon > left\n",
+    "\n",
+    "\n",
     "def parse_mat_time(time):\n",
     "    date = np.datetime64(\"0\") + np.timedelta64(int(time) - 1, \"D\")\n",
     "    hour = int(round((time - int(time)) * 24))\n",
     "    return date + np.timedelta64(hour, \"h\")\n",
     "\n",
     "\n",
-    "def dataset_from_mat(grid_mat_path, current_mat_path):\n",
+    "def dataset_from_mat(grid_mat_path, current_mat_path, remove_land_currents):\n",
     "    grid_mat = scipy.io.loadmat(grid_mat_path)\n",
     "    current_mat = scipy.io.loadmat(current_mat_path)\n",
     "    coords = grid_mat[\"totalGrid\"]\n",
@@ -85,9 +114,13 @@
     "    v_grid = np.zeros((1, len(lats), len(lons)))\n",
     "    for i in range(len(lons)):\n",
     "        for j in range(len(lats)):\n",
-    "            # data from .mat is measured in cm/s\n",
-    "            u_grid[0, j, i] = u[0][i * len(lats) + j] / 100\n",
-    "            v_grid[0, j, i] = v[0][i * len(lats) + j] / 100\n",
+    "            if remove_land_currents and not np.isnan(u[0][i * len(lats) + j]) and coord_inland(coastline, lats[j], lons[i]):\n",
+    "                u_grid[0, j, i] = np.nan\n",
+    "                v_grid[0, j, i] = np.nan\n",
+    "            else:\n",
+    "                # data from .mat is measured in cm/s\n",
+    "                u_grid[0, j, i] = u[0][i * len(lats) + j] / 100\n",
+    "                v_grid[0, j, i] = v[0][i * len(lats) + j] / 100\n",
     "    ds = xr.Dataset(\n",
     "        {\n",
     "            \"u\": ([\"time\", \"lat\", \"lon\"], u_grid),\n",
@@ -125,7 +158,7 @@
     "for i in range(start, 2400, incr):\n",
     "    name = f\"mat/{file_prefix}_{str(i).zfill(4)}.mat\"\n",
     "    try:\n",
-    "        ds = dataset_from_mat(\"mat/codartotalGrid.mat\", name)\n",
+    "        ds = dataset_from_mat(\"mat/codartotalGrid.mat\", name, True)\n",
     "        if ds_total is None:\n",
     "            ds_total = ds\n",
     "        else:\n",
@@ -150,7 +183,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fs = xr_dataset_to_fieldset(ds_total)"
+    "fs = xr_dataset_to_fieldset(ds_total)\n",
+    "fs.U.show()"
    ]
   }
  ],
