Visual plume tracker and parcels output comparisons

--- a/fieldset_compare.ipynb
+++ b/fieldset_compare.ipynb
@@ -70,7 +70,7 @@
     "#     [32.551707, -117.138],\n",
     "# )\n",
     "\n",
-    "spawn_loc_base = load_pts_mat(\"mat/pts_20200810_0030.mat\").T[1090:1100]\n",
+    "spawn_loc_base = load_pts_mat(\"mat/pts_20200810_0030.mat\", \"yf\", \"xf\").T[1090:1100]\n",
     "\n",
     "# spawn_locs = add_noise(spawn_loc_base, max_var, repeat=20)\n",
     "spawn_locs = spawn_loc_base\n",
@@ -178,7 +178,7 @@
     "for f in files:\n",
     "    ps = np.array([p.name for p in f[\"pfiles\"]])\n",
     "    print(f\"paths for {f['name']}\")\n",
-    "    plot_trajectories(ps, mod_domain, legend=False, scatter=False)"
+    "    plot_trajectories(ps, mod_domain, legend=True, scatter=False)"
    ]
   }
  ],
