--- a/plume_mat_fieldset_loader.ipynb
+++ b/plume_mat_fieldset_loader.ipynb
@@ -30,7 +30,7 @@
     "import xarray as xr\n",
     "\n",
     "from utils import create_gif, load_pts_mat\n",
-    "from parcels_utils import xr_dataset_to_fieldset, get_file_info\n",
+    "from parcels_utils import xr_dataset_to_fieldset\n",
     "from plot_utils import get_carree_axis, plot_particles"
    ]
   },
