plume mat particle loader check for wacky rows

--- a/plume_mat_particle_loader.ipynb
+++ b/plume_mat_particle_loader.ipynb
@@ -89,6 +89,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "invalid rows are the rows where particles randomly disappear or reappear in the middle of the simulation\n",
+    "\n",
+    "since I have no idea how the plume tracker code handles particle generation I have no idea how to interpret this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "invalid_rows = []\n",
+    "for i in range(dataset.dims[\"traj\"]):\n",
+    "    num_real = (~np.isnan(dataset[\"lat\"][i].values)).sum()\n",
+    "    if np.isnan(dataset[\"lat\"][i, :num_real]).any():\n",
+    "        invalid_rows.append(i)\n",
+    "invalid_rows = np.array(invalid_rows)\n",
+    "invalid_rows"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
