--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -78,7 +78,7 @@
     "`target` is the data you are interpolating.\n",
     "\n",
     "`interp_references` is a list of reference data to interpolate from. A few specifications:\n",
-    "- should be ordered from most accurate data to least accurate\n",
+    "- should be ordered from most accurate data to least accurate (highest to lowest resolution)\n",
     "- time domain should be identical or bigger than the one of the target\n",
     "- lat and lon domain should be bigger than the target's to prevent any out-of-bounds complications"
    ]
@@ -95,6 +95,13 @@
     "    get_file_info(\"current_netcdfs/west_coast_2km_hourly/tj_plume.nc\", 2, name=\"ref2km\"),\n",
     "    get_file_info(\"current_netcdfs/west_coast_6km_hourly/tj_plume.nc\", 6, name=\"ref6km\")\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### check validity of interpolation references"
    ]
   },
   {
@@ -157,18 +164,9 @@
    "outputs": [],
    "source": [
     "invalid = generate_mask_invalid(target[\"xrds\"][\"u\"].values)\n",
+    "invalid_pos = np.where(invalid)\n",
     "num_invalid = invalid.sum()\n",
     "print(f\"total invalid values on target data: {num_invalid}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "invalid_pos = np.where(invalid)\n",
-    "invalid_pos"
    ]
   },
   {
@@ -179,7 +177,7 @@
     "\n",
     "indexing Field values goes [time, depth, lat, lon]\n",
     "\n",
-    "Field does interpolation automatically when indexing values between it's coordinate values"
+    "Field does linear interpolation automatically when indexing values between it's coordinate values"
    ]
   },
   {
@@ -194,7 +192,7 @@
     "\n",
     "from testing, this causes enough error to completely change a simulation, so a kdtree must be used.\n",
     "\n",
-    "# another note\n",
+    "### another note\n",
     "\n",
     "I just looked at the particle trajectory that used the indexing without kd trees and it looked MAJORLY fucked up, so I probably wrote something wrong with the method. TODO will come back to this later."
    ]
@@ -244,8 +242,6 @@
     "    lon = target[\"lon\"][invalid_where[2][i]]\n",
     "    current_u, current_v = get_current_interp(ref, t * time_diff, lat, lon)\n",
     "    current = current_u + current_v\n",
-    "    # TODO: testing whether `current == 0` actually helps or not\n",
-    "    # basically makes interpolation a bit more \"aggressive\"?\n",
     "    if np.isnan(get_nearest_current(ref, t, lat, lon)[0]):\n",
     "        return np.nan, np.nan\n",
     "    return current_u, current_v"
@@ -255,9 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### today i learned\n",
-    "\n",
-    "doing DataArray.values does not return a numpy array copy"
+    "### linear interpolation using lower resolution data"
    ]
   },
   {
@@ -266,7 +260,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_st = time.time()\n",
     "target_interped_u = target[\"xrds\"][\"u\"].values.copy()\n",
     "target_interped_v = target[\"xrds\"][\"v\"].values.copy()\n",
     "invalid_interped = invalid.copy()\n",
@@ -283,39 +276,7 @@
     "    target_interped_v[invalid_pos_new] = arr_v\n",
     "    invalid_interped = generate_mask_invalid(target_interped_u)\n",
     "    print(f\"total invalid values after interpolation with {f['name']}: {invalid_interped.sum()}\")\n",
-    "    print(f\"    values filled: {num_invalid_new - invalid_interped.sum()}\")\n",
-    "time_en = time.time()\n",
-    "print(f\"time elapsed: {time_en - time_st}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### result: interpolate only when interpolated current is non-zero OR not nan\n",
-    "\n",
-    "total invalid values after interpolation with ref2km: 1562\n",
-    "\n",
-    "    values filled: 12589\n",
-    "total invalid values after interpolation with ref6km: 2\n",
-    "\n",
-    "    values filled: 1560\n",
-    "    \n",
-    "YEP it fills a lot more values"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### result: interpolate whenever nearest data point is not nan\n",
-    "\n",
-    "total invalid values after interpolation with ref2km: 3176\n",
-    "\n",
-    "    values filled: 10975\n",
-    "total invalid values after interpolation with ref6km: 758\n",
-    "\n",
-    "    values filled: 2418"
+    "    print(f\"    values filled: {num_invalid_new - invalid_interped.sum()}\")"
    ]
   },
   {
@@ -331,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### gridfill invalid values after interpolation\n",
+    "### gridfill invalid values after linear interpolation\n",
     "\n",
     "in theory there should still be invalid spaces left over because the 6 km data will sometimes have gaps\n",
     "\n",
@@ -353,7 +314,7 @@
     "masked_v = ma.masked_array(target_interped_v, invalid_interped)\n",
     "\n",
     "kw = dict(eps=1e-4, relax=0.6, itermax=1e4, initzonal=False,\n",
-    "          cyclic=False, verbose=True)\n",
+    "          cyclic=False, verbose=False)\n",
     "\n",
     "# since data is 3d, use axes 2 and 1 since axis 0 is time\n",
     "filled_u, converged_u = fill(masked_u, 2, 1, **kw)\n",
@@ -367,15 +328,7 @@
    "outputs": [],
    "source": [
     "invalid_filled = generate_mask_invalid(filled_u)\n",
-    "print(f\"total invalid values on filled: {invalid_filled.sum()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(f\"total invalid values on filled: {invalid_filled.sum()}\")\n",
     "print(f\"percent invalid filled: {(invalid_interped.sum() - invalid_filled.sum()) / invalid_interped.sum()}\")"
    ]
   },
@@ -392,7 +345,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### formatting, saving, and testing"
+    "## TODO: even more filling with PLS and smoothing with DCT shenanigans\n",
+    "\n",
+    "this is just one option, but hey"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.fftpack"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### formatting and saving"
    ]
   },
   {
@@ -432,17 +403,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fs_interp = xr_dataset_to_fieldset(target_interped_xrds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target[\"fs\"].U.show()\n",
-    "fs_interp.U.show()"
+    "fs_interp = xr_dataset_to_fieldset(target_interped_xrds)\n",
+    "target[\"fs\"].U.show()  # uninterpolated\n",
+    "fs_interp.U.show()  # interpolated"
    ]
   }
  ],
