smoothing testing except it doesn't work

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -65,7 +65,7 @@
     "from parcels import FieldSet\n",
     "from datetime import timedelta, datetime\n",
     "\n",
-    "from utils import generate_mask_invalid, conv_to_dataarray\n",
+    "from utils import generate_mask_invalid, generate_mask_none, conv_to_dataarray\n",
     "from parcels_utils import get_file_info, xr_dataset_to_fieldset"
    ]
   },
@@ -89,11 +89,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = get_file_info(\"current_netcdfs/west_coast_1km_hourly/tj_plume.nc\", 1, name=\"target\")\n",
+    "target = get_file_info(\"current_netcdfs/west_coast_1km_hourly/tijuana_river.nc\", 1, name=\"target\")\n",
     "\n",
     "interp_references = [\n",
-    "    get_file_info(\"current_netcdfs/west_coast_2km_hourly/tj_plume.nc\", 2, name=\"ref2km\"),\n",
-    "    get_file_info(\"current_netcdfs/west_coast_6km_hourly/tj_plume.nc\", 6, name=\"ref6km\")\n",
+    "    get_file_info(\"current_netcdfs/west_coast_2km_hourly/tijuana_river.nc\", 2, name=\"ref2km\"),\n",
+    "    get_file_info(\"current_netcdfs/west_coast_6km_hourly/tijuana_river.nc\", 6, name=\"ref6km\")\n",
     "]"
    ]
   },
@@ -163,6 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "no_data = generate_mask_none(target[\"xrds\"][\"u\"].values)\n",
     "invalid = generate_mask_invalid(target[\"xrds\"][\"u\"].values)\n",
     "invalid_pos = np.where(invalid)\n",
     "num_invalid = invalid.sum()\n",
@@ -241,8 +242,9 @@
     "    lat = target[\"lat\"][invalid_where[1][i]]\n",
     "    lon = target[\"lon\"][invalid_where[2][i]]\n",
     "    current_u, current_v = get_current_interp(ref, t * time_diff, lat, lon)\n",
-    "    current = current_u + current_v\n",
-    "    if np.isnan(get_nearest_current(ref, t, lat, lon)[0]):\n",
+    "    current_abs = abs(current_u) + abs(current_v)\n",
+    "    # if both the u and v components are 0, there's probably no data there\n",
+    "    if np.isnan(get_nearest_current(ref, t, lat, lon)[0]) or current_abs == 0:\n",
     "        return np.nan, np.nan\n",
     "    return current_u, current_v"
    ]
@@ -292,6 +294,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## TODO: even more filling with PLS and smoothing with DCT shenanigans\n",
+    "\n",
+    "this is just one option, but hey\n",
+    "\n",
+    "ps ignore this code i have no idea what i was doing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.fftpack\n",
+    "\n",
+    "# temporary testing with smoothing\n",
+    "# i just brainlessly stuck the equations in here\n",
+    "field_shape = target_interped_u.shape\n",
+    "k, l = np.meshgrid(np.arange(field_shape[1]), np.arange(field_shape[2]), indexing='ij')\n",
+    "s = 0.01\n",
+    "\n",
+    "filter_mat = 4 - 2 * np.cos((k - 1) * math.pi / field_shape[1]) - 2 * np.cos((l - 1) * math.pi / field_shape[2])\n",
+    "filter_mat = 1 / (1 + s * filter_mat ** 2)\n",
+    "\n",
+    "# dct freaks out when there's nans, have to replace them with 0\n",
+    "smoothed_u = np.nan_to_num(target_interped_u)\n",
+    "smoothed_v = np.nan_to_num(target_interped_v)\n",
+    "for i in range(smoothed_u.shape[0]):\n",
+    "    smoothed_u[i] = scipy.fftpack.idct(scipy.fftpack.dct(filter_mat * smoothed_u[i]))\n",
+    "    smoothed_v[i] = scipy.fftpack.idct(scipy.fftpack.dct(filter_mat * smoothed_v[i]))\n",
+    "smoothed_u[np.where(no_data)] = np.nan\n",
+    "smoothed_v[np.where(no_data)] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### gridfill invalid values after linear interpolation\n",
     "\n",
     "in theory there should still be invalid spaces left over because the 6 km data will sometimes have gaps\n",
@@ -302,23 +342,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy.ma as ma\n",
-    "from gridfill import fill\n",
+    "# import numpy.ma as ma\n",
+    "# from gridfill import fill\n",
     "\n",
-    "masked_u = ma.masked_array(target_interped_u, invalid_interped)\n",
-    "masked_v = ma.masked_array(target_interped_v, invalid_interped)\n",
+    "# masked_u = ma.masked_array(target_interped_u, invalid_interped)\n",
+    "# masked_v = ma.masked_array(target_interped_v, invalid_interped)\n",
     "\n",
-    "kw = dict(eps=1e-4, relax=0.6, itermax=1e4, initzonal=False,\n",
-    "          cyclic=False, verbose=False)\n",
+    "# kw = dict(eps=1e-4, relax=0.6, itermax=1e4, initzonal=False,\n",
+    "#           cyclic=False, verbose=False)\n",
     "\n",
-    "# since data is 3d, use axes 2 and 1 since axis 0 is time\n",
-    "filled_u, converged_u = fill(masked_u, 2, 1, **kw)\n",
-    "filled_v, converged_v = fill(masked_v, 2, 1, **kw)"
+    "# # since data is 3d, use axes 2 and 1 since axis 0 is time\n",
+    "# filled_u, converged_u = fill(masked_u, 2, 1, **kw)\n",
+    "# filled_v, converged_v = fill(masked_v, 2, 1, **kw)"
    ]
   },
   {
@@ -327,9 +365,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "invalid_filled = generate_mask_invalid(filled_u)\n",
-    "print(f\"total invalid values on filled: {invalid_filled.sum()}\")\n",
-    "print(f\"percent invalid filled: {(invalid_interped.sum() - invalid_filled.sum()) / invalid_interped.sum()}\")"
+    "# invalid_filled = generate_mask_invalid(filled_u)\n",
+    "# print(f\"total invalid values on filled: {invalid_filled.sum()}\")\n",
+    "# print(f\"percent invalid filled: {(invalid_interped.sum() - invalid_filled.sum()) / invalid_interped.sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filled_u = target_interped_u\n",
+    "filled_v = target_interped_v"
    ]
   },
   {
@@ -339,24 +387,6 @@
     "### wow\n",
     "\n",
     "unsurprisingly gridfill did jack shit"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TODO: even more filling with PLS and smoothing with DCT shenanigans\n",
-    "\n",
-    "this is just one option, but hey"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipy.fftpack"
    ]
   },
   {
@@ -375,8 +405,19 @@
     "# re-add coordinates, dimensions, and metadata to interpolated data\n",
     "darr_u = conv_to_dataarray(filled_u, target[\"xrds\"][\"u\"])\n",
     "darr_v = conv_to_dataarray(filled_v, target[\"xrds\"][\"v\"])\n",
-    "target_interped_xrds = target[\"xrds\"].drop_vars([\"u\", \"v\"]).assign(u=darr_u, v=darr_v)\n",
-    "target_interped_xrds"
+    "target_interped_xrds = target[\"xrds\"].drop_vars([\"u\", \"v\"]).assign(u=darr_u, v=darr_v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# re-add coordinates, dimensions, and metadata to smoothed data\n",
+    "darr_u_smooth = conv_to_dataarray(smoothed_u, target[\"xrds\"][\"u\"])\n",
+    "darr_v_smooth = conv_to_dataarray(smoothed_v, target[\"xrds\"][\"v\"])\n",
+    "target_interped_xrds_smooth = target[\"xrds\"].drop_vars([\"u\", \"v\"]).assign(u=darr_u_smooth, v=darr_v_smooth)"
    ]
   },
   {
@@ -404,8 +445,10 @@
    "outputs": [],
    "source": [
     "fs_interp = xr_dataset_to_fieldset(target_interped_xrds)\n",
+    "fs_smooth = xr_dataset_to_fieldset(target_interped_xrds_smooth)\n",
     "target[\"fs\"].U.show()  # uninterpolated\n",
-    "fs_interp.U.show()  # interpolated"
+    "fs_interp.U.show()  # interpolated\n",
+    "fs_smooth.U.show()  # interpolated + smooth"
    ]
   }
  ],
