Smooth testing shenanigans that slightly work

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -48,7 +48,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -313,17 +315,17 @@
     "# i just brainlessly stuck the equations in here\n",
     "field_shape = target_interped_u.shape\n",
     "k, l = np.meshgrid(np.arange(field_shape[1]), np.arange(field_shape[2]), indexing='ij')\n",
-    "s = 0.01\n",
+    "s = 0.1\n",
     "\n",
-    "filter_mat = 4 - 2 * np.cos((k - 1) * math.pi / field_shape[1]) - 2 * np.cos((l - 1) * math.pi / field_shape[2])\n",
-    "filter_mat = 1 / (1 + s * filter_mat ** 2)\n",
+    "lam = 4 - 2 * np.cos((k - 1) * math.pi / field_shape[1]) - 2 * np.cos((l - 1) * math.pi / field_shape[2])\n",
+    "gam = 1 / (1 + s * lam ** 2)\n",
     "\n",
     "# dct freaks out when there's nans, have to replace them with 0\n",
     "smoothed_u = np.nan_to_num(target_interped_u)\n",
     "smoothed_v = np.nan_to_num(target_interped_v)\n",
     "for i in range(smoothed_u.shape[0]):\n",
-    "    smoothed_u[i] = scipy.fftpack.idct(scipy.fftpack.dct(filter_mat * smoothed_u[i]))\n",
-    "    smoothed_v[i] = scipy.fftpack.idct(scipy.fftpack.dct(filter_mat * smoothed_v[i]))\n",
+    "    smoothed_u[i] = scipy.fftpack.idct(gam * scipy.fftpack.dct(smoothed_u[i], norm=\"ortho\"), norm=\"ortho\")\n",
+    "    smoothed_v[i] = scipy.fftpack.idct(gam * scipy.fftpack.dct(smoothed_v[i], norm=\"ortho\"), norm=\"ortho\")\n",
     "smoothed_u[np.where(no_data)] = np.nan\n",
     "smoothed_v[np.where(no_data)] = np.nan"
    ]
